# HTTP-Analyzer-CLI

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.md
src/http_analyzer/: __init__.py  cli.py  client.py  models.py  request_builder.py
tests/: test_main.py
